--- a/streamlit/config.toml
+++ b/streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#181718"
-backgroundColor="#e4e3ea"
+backgroundColor="#232123"
 secondaryBackgroundColor="#8b8e8e"
-textColor="#000000"
+textColor="#e6e4e4"
 
